kml/KmlReader: Check if stream is zipped, before unmarshalling.